Fixed h2 size on mobile

--- a/blog/static/customStyle.scss
+++ b/blog/static/customStyle.scss
@@ -246,7 +246,7 @@ iframe {
         }
 
         h2 {
-            font-size: 1.3em;
+            font-size: 1.4em;
             padding: 10px 0;
             line-height: 0.8em;
         }
